--- a/css/sheet02/ex01/style.css
+++ b/css/sheet02/ex01/style.css
@@ -29,12 +29,19 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 24px 0 24px;
+  padding: 0 24px;
 }
 
 header a {
   margin: 10px;
 }
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 #header-nav-list {
   font-size: 10px;
   display: flex;
@@ -45,7 +52,7 @@ header button {
   background-color: white;
   border: 1px solid black;
   border-radius: 3px;
-  padding: 4px 16px 4px 16px;
+  padding: 4px 16px;
   font-size: 10px;
   transition: 0.3s;
   margin-left: 20px;
@@ -60,12 +67,17 @@ header button {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 72px;
+  padding: 72px 0;
   background-color: #f0f0f0;
   text-align: center;
+  width: 100%;
 }
 
-#free-trial > button {
+#free-trial-container {
+  max-width: 400px;
+}
+
+#free-trial button {
   background-color: black;
   color: white;
   padding: 12px 24px 12px 24px;
@@ -100,10 +112,7 @@ header button {
   align-items: center;
   justify-content: center;
   margin: 25px;
-}
-
-#propositions > section {
-  margin: 10px;
+  gap: 25px;
 }
 
 .black_square {
